# airsim-drone-agent

./: .gitignore  README.md  pyproject.toml
configs/: README.md
scripts/: run_web_ui.py  test_agent.py  test_flight_control.py  test_logger.py  test_rgb_5cams_main.py.py
src/airsim_drone_agent/agent/: __init__.py  agent.py  tools.py
src/airsim_drone_agent/enums/: __init__.py  camera.py
src/airsim_drone_agent/mllm/: __init__.py  client.py  factory.py  image_codec.py  messages.py
src/airsim_drone_agent/mllm/providers/: openai_provider.py
src/airsim_drone_agent/sim/: __init__.py  airsim_client.py  airsim_settings.py  connection.py  drone_env.py  flight_controller.py  sensors.py
src/airsim_drone_agent/utils/: logger.py
src/airsim_drone_agent/web/: __init__.py  gradio_app.py
