[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airsim-drone-agent"
version = "0.1.0"
description = "AirSim drone agent project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "airsim",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
